// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProxyErrorDialog is displayed after users canceled the login 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="fade modal-backdrop show"
  />
  <div
    aria-modal="true"
    class="fade dialog  modal show"
    data-focus-visible-added=""
    role="dialog"
    style="display: block;"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-dialog-centered"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="tw-flex tw-flex-row"
          >
            <b>
              Proxy error
            </b>
          </div>
          <span
            class="mdi mdi-alert"
          />
        </div>
        <div
          class="tw-select-text modal-body"
        >
          <p>
            It appears that you are having problems authenticating with a proxy server. This will prevent you from using certain features of nRF Connect for Desktop, such as installing downloadable apps or checking for updates.
          </p>
          <p>
            If you are unable to resolve the issue, then go to Settings and disable "Check for updates at startup". Then restart nRF Connect for Desktop and install apps manually by following the instructions at
             
            <a
              class="tw-preflight tw-text-nordicBlue hover:tw-underline"
              href="https://github.com/NordicSemiconductor/pc-nrfconnect-launcher"
              rel="noreferrer noopener"
              target="_blank"
            >
              https://github.com/NordicSemiconductor/pc-nrfconnect-launcher
            </a>
            .
          </p>
        </div>
        <div
          class="tw-preflight tw-flex tw-flex-row-reverse tw-justify-start tw-gap-2 tw-border-none tw-p-4 modal-footer"
        >
          <button
            class="tw-preflight tw-h-8 tw-px-4 tw-text-sm tw-border tw-border-gray-700 tw-bg-white tw-text-gray-700 active:enabled:tw-bg-gray-50 "
            type="button"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ProxyErrorDialog is hidden again after users confirmed the login 1`] = `
<body
  class=""
  style="padding-right: 0px;"
>
  <div />
</body>
`;

exports[`ProxyErrorDialog is initially invisible 1`] = `
<body>
  <div />
</body>
`;
